// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="container list"
>
  <div
    className="list-header"
  >
    <div
      className="list-header__expenses"
    >
      Expenses
    </div>
    <div
      className="list-header__expense"
    >
      Expense
    </div>
    <div
      className="list-header__amount"
    >
      Amount
    </div>
  </div>
  <ExpenseListItem
    amount={195}
    createdAt={0}
    description="Gum"
    id="1"
    key="1"
    note=""
  />
  <ExpenseListItem
    amount={109500}
    createdAt={-345600000}
    description="Rent"
    id="2"
    key="2"
    note=""
  />
  <ExpenseListItem
    amount={4550}
    createdAt={345600000}
    description="Credit Card"
    id="3"
    key="3"
    note=""
  />
</div>
`;

exports[`Should render ExpenseList with no expenses 1`] = `
<div
  className="container list"
>
  <div
    className="list-header"
  >
    <div
      className="list-header__expenses"
    >
      Expenses
    </div>
    <div
      className="list-header__expense"
    >
      Expense
    </div>
    <div
      className="list-header__amount"
    >
      Amount
    </div>
  </div>
  <p
    className="list-item list-item--message"
  >
    No expenses in this period.
  </p>
</div>
`;
